--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
 
   <header class="header">
 
+    <div class="overlay"></div>
+
     <nav class="flex flex-jc-sb flex-ai-c">
    
       <a href="/" class="header__logo">
         <img src="images/logo.svg" alt="EasyBank">
       </a>
 
-      <a href="#" class="header__menu hide-for-desktop">
+      <a id="btnHamburger" href="#" class="header__menu hide-for-desktop">
         <span></span>
         <span></span>
         <span></span>
@@ -49,13 +51,6 @@
 
   <div class="front-page"></div>
 
-<!--  
-
-  
-  
-  
-  
-  
 
   Request Invite
 
@@ -128,7 +123,7 @@
 
   © Easybank. All Rights Reserved
 
--->
+
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
