--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
     <div class="overlay"></div>
 
-    <nav class="flex flex-jc-sb flex-ai-c">
+    <nav class="container flex flex-jc-sb flex-ai-c">
    
       <a href="/" class="header__logo">
         <img src="images/logo.svg" alt="EasyBank">
       </a>
 
-      <a id="btnHamburger" href="#" class="header__menu hide-for-desktop">
+      <a id="btnHamburger" href="#" class="header__toggle hide-for-desktop">
         <span></span>
         <span></span>
         <span></span>
@@ -46,6 +46,14 @@
       <a href="#" class="button hide-for-mobile">Request Invite</a>
 
     </nav>
+
+    <div class="header__menu">
+      <a href="#" class="links">Home</a>
+      <a href="#" class="links">About</a>
+      <a href="#" class="links">Contact</a>
+      <a href="#" class="links">Blog</a>
+      <a href="#" class="links">Careers</a>
+    </div>
 
   </header>
 
